syntax = "proto3";

package parkinglistservice;

option go_package = "./;proto";

message GetParkingRequest {
  string id = 1;
}

message GetParkingResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string location = 4;
  int64 available_slots = 5;
  int64 reserved_slots = 6;
}

message AddParkingRequest {
  string title = 1;
  string description = 2;
  string location = 3;
}

message AddParkingResponse {
  string id = 1;
}

service ParkingListService {
  rpc GetParking (GetParkingRequest) returns (GetParkingResponse) {};
  rpc AddParking (AddParkingRequest) returns (AddParkingResponse) {};
}
